---------------------------------------------------------------------------
Version 2.0.0 (rgerhards), 2007-12-??
- small doc fix for $IncludeConfig
- fixed a bug in llDestroy()
- bugfix: fixing memory leak when message queue is full and during
  parsing. Thanks to varmojfekoj for the patch.
- bugfix: when compiled without network support, unix sockets were
  not properply closed
---------------------------------------------------------------------------
Version 1.21.0 (rgerhards), 2007-12-19
- GSS-API support for syslog/TCP connections was added. Thanks to
  varmojfekoj for providing the patch with this functionality
- code cleanup
- enhanced $IncludeConfig directive to support wildcard filenames
- changed some multithreading synchronization
---------------------------------------------------------------------------
Version 1.20.1 (rgerhards), 2007-12-12
- corrected a debug setting that survived release. Caused TCP connections
  to be retried unnecessarily often.
- When a hostname ACL was provided and DNS resolution for that name failed,
  ACL processing was stopped at that point. Thanks to mildew for the patch.
  Fedora Bugzilla: http://bugzilla.redhat.com/show_bug.cgi?id=395911
- fixed a potential race condition, see link for details:
  http://rgerhards.blogspot.com/2007/12/rsyslog-race-condition.html
  Note that the probability of problems from this bug was very remote
- fixed a memory leak that happend when PostgreSQL date formats were
  used
---------------------------------------------------------------------------
Version 1.20.0 (rgerhards), 2007-12-07
- an output module for postgres databases has been added. Thanks to
  sur5r for contributing this code
- unloading dynamic modules has been cleaned up, we now have a
  real implementation and not just a dummy "good enough for the time
  being".
- enhanced platform independence - thanks to Bartosz Kuzma and Michael
  Biebl for their very useful contributions